--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: Adventures into the Nelluon Triangle Wiki
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Repository for all information related to the dnd mini campaign in the Nelluon Triangle region.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
