--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ baseurl: "/dnd-mini-campaign"
 # !! You don't need to change any of the configuration flags below !!
 #
 
-permalink: /:index.md/
+permalink: /:index.html/
 
 # The release of Jekyll Now that you're using
 version: v1.2.0
