--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Adventures into the Nelluon Triangle Wiki
 description: Repository for all information related to the dnd mini campaign in the Nelluon Triangle region.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/concentric_world.jpg
 
 #
 # Flags below are optional
