--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: Adventures into the Nelluon Triangle Wiki
+name: Adventures into the Nelluon Triangle
 
 # Short bio or description (displayed in the header)
 description: Repository for all information related to the dnd mini campaign in the Nelluon Triangle region.
