--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Adventures into the Nelluon Triangle
 description: Repository for all information related to the dnd mini campaign in the Nelluon Triangle region.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://github.com/chrysalise/dnd-mini-campaign/blob/master/images/Dvipas.jpg?raw=true
+avatar: https://github.com/chrysalise/dnd-mini-campaign/blob/master/images/Dvipas.jpg
 
 # Includes an icon in the footer for each username you enter
 footer-links:
